--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:fontFamily="@font/my_written"
         android:letterSpacing="0.1"
         android:lineSpacingExtra="5dp"
-        android:text="There are 16 hours left\nDon't waste them"
+        android:text="@string/main_greeting"
         android:textColor="@color/black"
         android:textSize="32dp"
         android:textStyle="normal"
@@ -76,7 +76,7 @@
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sign in"
+        android:text="@string/sign_in_btn"
         android:textColor="@color/black"
         android:textAllCaps="false"
         android:textSize="32dp"
@@ -94,7 +94,7 @@
         android:background="@drawable/btn_stroke"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sign up"
+        android:text="@string/sign_up_btn"
         android:layout_marginTop="20dp"
         android:paddingTop="2dp"
         android:paddingBottom="4dp"
@@ -105,7 +105,6 @@
         android:textSize="32dp"
         android:textStyle="normal"
         android:fontFamily="@font/my_written"
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/main_sign_btn" />
