--- a/app/src/main/res/drawable/track_interest.xml
+++ b/app/src/main/res/drawable/track_interest.xml
@@ -10,9 +10,10 @@
     </item>
 
     <item android:state_checked="true">
-        <shape android:shape="rectangle">
-            <solid android:color="#f28500"/>      <!--color name="color_green">#3bd391</color-->
-            <corners android:radius="100sp"/>
+        <shape android:layout_width="wrap_content" android:shape="rectangle">
+            <solid android:color="#f28500" />      <!--color name="color_green">#3bd391</color-->
+            <corners android:radius="100sp" />
+            <stroke android:color="#ffcc00" android:width="1.5dp"/>
         </shape>
     </item>
 </selector>
