--- a/app/src/main/res/drawable/track_ordinary.xml
+++ b/app/src/main/res/drawable/track_ordinary.xml
@@ -13,6 +13,7 @@
         <shape android:shape="rectangle">
             <solid android:color="#70A6D3"/>      <!--color name="color_green">#3bd391</color-->
             <corners android:radius="100sp"/>
+            <stroke android:color="#bbdefb" android:width="1.5dp"/>
         </shape>
     </item>
 </selector>
