--- a/app/src/main/res/drawable/track_productive.xml
+++ b/app/src/main/res/drawable/track_productive.xml
@@ -13,6 +13,7 @@
         <shape android:shape="rectangle">
             <solid android:color="#ed426d"/>      <!--color name="color_green">#3bd391</color-->
             <corners android:radius="100sp"/>
+            <stroke android:color="#f0989f" android:width="1.5dp"/>
         </shape>
     </item>
 </selector>
