--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -4,20 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:elevation="0dp"
+    android:padding="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/calendar_btn_day"
-        android:layout_gravity="center_horizontal"
+        android:stateListAnimator="@null"
         android:layout_width="33dp"
         android:layout_height="33dp"
+        android:layout_gravity="center_horizontal"
         android:background="@drawable/rounded_day"
         android:fontFamily="@font/my_written"
-        android:text="1"
         android:gravity="center"
-        app:layout_constraintTop_toTopOf="parent"
+        android:text="1"
+        android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:textSize="25dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:elevation="0dp"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:clickable="false"/>
 
 </RelativeLayout>
