--- a/app/src/main/res/layout/custom_friend_list_row.xml
+++ b/app/src/main/res/layout/custom_friend_list_row.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/list_view_style"
     android:paddingBottom="10dp"
@@ -50,7 +50,7 @@
             android:layout_marginTop="2dp"
             android:textSize="22dp"
             android:fontFamily="@font/my_written"
-
+            android:gravity="center"
             android:letterSpacing="0.1"
             android:textColor="#787878"
             app:layout_constraintTop_toBottomOf="@id/friend_list_name_txt"
@@ -65,56 +65,57 @@
         android:id="@+id/friend_list_percentages_productive_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="50%"
-        android:textSize = "22dp"
-        android:textColor = "#f0989f"
-        android:layout_gravity = "center_vertical"
+        android:layout_gravity="center_vertical"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="22dp"
+        android:layout_toLeftOf="@id/friend_list_percentages_interest_txt"
+
         android:fontFamily="@font/my_written"
         android:letterSpacing="0.1"
-        android:layout_toRightOf="@id/friend_list_name_layout"/>
+        android:text="50%"
+        android:textColor="#f0989f"
+        android:textSize="22dp" />
 
     <TextView
         android:id="@+id/friend_list_percentages_interest_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="25%"
-        android:textSize = "22dp"
-        android:letterSpacing="0.1"
-        android:layout_gravity = "center_vertical"
+        android:layout_gravity="center_vertical"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="22dp"
+        android:layout_toLeftOf="@id/friend_list_percentages_ordinary_txt"
         android:fontFamily="@font/my_written"
+        android:letterSpacing="0.1"
+        android:text="25%"
         android:textColor="#ffcc00"
-        android:layout_toRightOf="@id/friend_list_percentages_productive_txt"/>
+        android:textSize="22dp" />
 
     <TextView
         android:id="@+id/friend_list_percentages_ordinary_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="25%"
-        android:textSize = "22dp"
-        android:letterSpacing="0.1"
-        android:layout_gravity = "center_vertical"
+        android:layout_alignParentRight="true"
+        android:layout_gravity="center_vertical|right"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="22dp"
+        android:layout_marginRight="30dp"
         android:fontFamily="@font/my_written"
+        android:letterSpacing="0.1"
+        android:text="25%"
         android:textColor="#bbdefb"
-        android:layout_toRightOf="@id/friend_list_percentages_interest_txt" />
+        android:textSize="22dp" />
 
     <TextView
         android:id="@+id/friend_list_last_notion_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/friend_list_name_layout"
+        android:layout_centerHorizontal="true"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/my_written"
-        android:layout_centerHorizontal = "true"
         android:letterSpacing="0.1"
         android:text="Хороший день"
         android:textColor="@color/black"
-        android:textSize="16dp"
-        />
+        android:textSize="16dp" />
 </RelativeLayout>
