--- a/app/src/main/res/layout/dialog_add_friend.xml
+++ b/app/src/main/res/layout/dialog_add_friend.xml
@@ -8,13 +8,12 @@
 
     <EditText
         android:id="@+id/add_text_email_field"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/input_field"
-
         android:ems="10"
         android:fontFamily="@font/my_written"
         android:textColorHint="#686868"
@@ -24,6 +23,8 @@
         android:gravity="center_vertical|left"
         android:paddingBottom="4dp"
         android:paddingLeft="5dp"
+        android:minHeight="48dp"
+        android:minWidth="100dp"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +39,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="60dp"
         android:layout_marginBottom="20dp"
-        android:text="Find"
+        android:text="@string/find_btn"
         android:textColor="@color/black"
         android:textAllCaps="false"
         android:textSize="24dp"
