--- a/app/src/main/res/layout/dialog_delete_friend.xml
+++ b/app/src/main/res/layout/dialog_delete_friend.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
         android:ems="10"
-        android:text="Do you want to delete this friend?"
+        android:text="@string/delete_friend_btn"
         android:fontFamily="@font/my_written"
         android:textColorHint="#686868"
         android:letterSpacing="0.1"
@@ -35,7 +35,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
-        android:text="Yes"
+        android:text="@string/yes_btn"
         android:textColor="#f0989f"
         android:textAllCaps="false"
         android:textSize="24dp"
@@ -54,7 +54,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
-        android:text="NO"
+        android:text="@string/no_btn"
         android:textColor="#7CCF4E"
         android:textAllCaps="false"
         android:textSize="24dp"
