--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,10 +7,33 @@
     tools:context=".ProfileFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/progress_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#A8FFFFFF"
+        android:translationZ="8dp"
+        android:visibility="gone"
+        tools:visibility="gone">
+
+        <ProgressBar
+            android:id="@+id/main_progress_bar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:indeterminateTint="#f0989f"
+            android:progressDrawable="@drawable/progres_bar_style"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cur_day_constraint_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
+        android:layout_centerHorizontal="true">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/pro_btn_day"
@@ -20,9 +43,9 @@
             android:layout_marginTop="70dp"
             android:background="@drawable/rounded_day"
             android:fontFamily="@font/my_written"
+            android:gravity="center_horizontal|center_vertical"
             android:letterSpacing="0.1"
-            android:gravity="center_horizontal"
-            android:paddingEnd="10dp"
+            android:paddingEnd="0dp"
             android:text="11"
             android:textSize="100dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -34,28 +57,31 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:text="IMPROVE YOUR DAY"
-            android:textSize="32dp"
+            android:clickable="true"
             android:fontFamily="@font/my_written"
             android:letterSpacing="0.1"
-            android:clickable="true"
-            app:layout_constraintTop_toBottomOf="@id/pro_btn_day"
+            android:text="@string/profile_greeting"
+            android:textSize="32dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/pro_btn_day" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/pro_day_constraint_btn"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/cur_day_constraint_btn"
+        android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="70dp"
-        android:layout_marginTop="310dp"
-        android:layout_marginRight="70dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        >
+        app:layout_constraintStart_toStartOf="parent">
+
         <TextView
             android:id="@+id/pro_statistic_txt"
             android:layout_width="wrap_content"
@@ -63,105 +89,116 @@
             android:layout_marginTop="5dp"
             android:fontFamily="@font/my_written"
             android:letterSpacing="0.1"
-            android:text="Statistic:"
+            android:text="@string/statistic_field"
             android:textColor="@color/black"
             android:textSize="24dp"
-            app:layout_gravity="center_horizontal"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_gravity="center_horizontal" />
 
         <TextView
             android:id="@+id/pro_statistic_interest_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="40dp"
             android:layout_marginEnd="20dp"
             android:fontFamily="@font/my_written"
             android:letterSpacing="0.1"
-            android:text="Interesting days:"
+            android:text="@string/interesting_days_field"
             android:textColor="@color/black"
             android:textSize="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/pro_statistic_txt"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/pro_statistic_txt" />
 
         <TextView
             android:id="@+id/pro_statistic_interest_percents_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="0dp"
             android:layout_marginLeft="20dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="0dp"
             android:fontFamily="@font/my_written"
             android:letterSpacing="0.1"
             android:text="33%"
             android:textColor="#ffcc00"
             android:textSize="24dp"
-            app:layout_constraintStart_toEndOf="@id/pro_statistic_interest_txt"
-            app:layout_constraintTop_toBottomOf="@+id/pro_statistic_txt"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/pro_statistic_txt" />
 
         <TextView
             android:id="@+id/pro_statistic_productive_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginTop="35dp"
             android:fontFamily="@font/my_written"
             android:letterSpacing="0.1"
-            android:text="Productive days:"
+            android:text="@string/productive_days_field"
             android:textColor="@color/black"
             android:textSize="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/pro_statistic_interest_txt"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/pro_statistic_interest_txt" />
 
         <TextView
             android:id="@+id/pro_statistic_productive_percents_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="35dp"
             android:fontFamily="@font/my_written"
             android:letterSpacing="0.1"
             android:text="33%"
             android:textColor="#f0989f"
             android:textSize="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/pro_statistic_interest_txt"
-            app:layout_constraintStart_toEndOf="@id/pro_statistic_productive_txt"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/pro_statistic_interest_txt" />
 
         <TextView
             android:id="@+id/pro_statistic_ordinary_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="35dp"
             android:layout_marginEnd="10dp"
             android:fontFamily="@font/my_written"
             android:letterSpacing="0.1"
-            android:text="Ordinary days:"
+            android:text="@string/ordinary_days_field"
             android:textColor="@color/black"
             android:textSize="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/pro_statistic_productive_txt"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/pro_statistic_productive_txt" />
 
         <TextView
             android:id="@+id/pro_statistic_ordinary_percents_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="0dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="35dp"
+            android:layout_marginEnd="0dp"
             android:fontFamily="@font/my_written"
             android:letterSpacing="0.1"
             android:text="33%"
             android:textColor="#bbdefb"
             android:textSize="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/pro_statistic_productive_txt"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/pro_statistic_productive_txt" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</FrameLayout>
+    <Button
+        android:id="@+id/pro_change_user"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="500dp"
+        android:fontFamily="@font/my_written"
+        android:text="@string/change_user_btn"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        android:textSize="32dp"
+        android:textStyle="normal"
+        android:layout_margin="50dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/pro_day_constraint_btn"/>
+
+</RelativeLayout>
