--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -10,12 +10,12 @@
         android:orderInCategory="1"/>
     <item
         android:id = "@+id/menu_item_calendar"
-        android:icon = "@drawable/icon_calendar"
+        android:icon = "@drawable/ic_calendar"
         android:orderInCategory="2"
         android:title="@null" />
     <item
         android:id = "@+id/menu_item_profile"
-        android:icon = "@drawable/ic_baseline_person_24"
+        android:icon = "@drawable/ic_profile"
         android:title="@null"
         android:orderInCategory="3"/>
     <item
